--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "typecheck": "tsc --noEmit",
-    "build": "wrangler build"
+    "build": "wrangler build",
+    "release": "bumpp --commit --tag --push"
   },
   "dependencies": {
     "postal-mime": "^2.4.1"
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
     "@cloudflare/workers-types": "^4.20250121.0",
+    "bumpp": "^10.0.1",
     "eslint": "^9.18.0",
     "typescript": "^5.7.3",
     "wrangler": "^3.103.2"
