--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "release": "bumpp --commit --tag --push"
   },
   "dependencies": {
+    "@owlrelay/webhook": "^0.0.1",
     "postal-mime": "^2.4.1"
   },
   "devDependencies": {
